add native-access-option to exec plugin config